# PythonDevPractice

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
PythonDevPractice/: temp.ipynb
experiments/: temp.ipynb
pythondevpractice/: simple_classes.py  simple_functions.py
src/PythonDevPractice/: temp.py
src/pythondevpractice/: __init__.py
test/: test_temp.py
tests/: conftest.py  debug_logging.py  test_base.py  test_temp.py
