[project]
name = "pythondevpractice"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tanakai0", email = "tanakatanakakai@gmail.com" }
]
dependencies = [
    "numpy>=1.26.4",
    "jupyterlab>=4.1.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pythondevpractice"]
